5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/3094/executions/1747_3091.log
== TEST (2019-05-16 10:30:57) 
-- CODE:
V = 3
E = 1
D = 0

while(r != X):
	r=input("resultado: ").upper()
	if(r == V):
		re = 3
	elif(r == E):
		re = 1
	elif(r == D):
		re = 0
	else:
		re = 0

p = re * (1/100)
print(p)
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    while(r != X):
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:31:48) 
-- CODE:
V = 3
E = 1
D = 0

r = input("resultado: ")
while(r != X):
	#r=input("resultado: ").upper()
	if(r == V):
		re = 3
	elif(r == E):
		re = 1
	elif(r == D):
		re = 0
	else:
		re = 0

p = re * (1/100)
print(p)
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(r != X):
NameError: name 'X' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:31:59) 
-- CODE:
V = 3
E = 1
D = 0

r = input("resultado: ").upper()
while(r != X):
	#r=input("resultado: ").upper()
	if(r == V):
		re = 3
	elif(r == E):
		re = 1
	elif(r == D):
		re = 0
	else:
		re = 0

p = re * (1/100)
print(p)
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(r != X):
NameError: name 'X' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:32:36) 
-- CODE:
V = 3
E = 1
D = 0
x = fim
r = input("resultado: ").upper()
while(r != X):
	#r=input("resultado: ").upper()
	if(r == V):
		re = 3
	elif(r == E):
		re = 1
	elif(r == D):
		re = 0
	else:
		re = 0

p = re * (1/100)
print(p)
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    x = fim
NameError: name 'fim' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:32:46) 
-- CODE:
V = 3
E = 1
D = 0
x = "fim"
r = input("resultado: ").upper()
while(r != X):
	#r=input("resultado: ").upper()
	if(r == V):
		re = 3
	elif(r == E):
		re = 1
	elif(r == D):
		re = 0
	else:
		re = 0

p = re * (1/100)
print(p)
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(r != X):
NameError: name 'X' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:32:57) 
-- CODE:
V = 3
E = 1
D = 0
X = "fim"
r = input("resultado: ").upper()
while(r != X):
	#r=input("resultado: ").upper()
	if(r == V):
		re = 3
	elif(r == E):
		re = 1
	elif(r == D):
		re = 0
	else:
		re = 0

p = re * (1/100)
print(p)
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(r != X):
NameError: name 'X' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:33:06) 
-- CODE:
V = 3
E = 1
D = 0
X = "fim"
r = input("resultado: ").upper()
while(r != X):
	#r=input("resultado: ").upper()
	if(r == V):
		re = 3
	elif(r == E):
		re = 1
	elif(r == D):
		re = 0
	else:
		re = 0

p = re * (1/100)
print(p)
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(r != X):
NameError: name 'X' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:33:32) 
-- CODE:
V = 3
E = 1
D = 0
X = "fim"
r = input("resultado: ").upper()
while(r != X):
	#r=input("resultado: ").upper()
	if(r == V):
		re = 3
	elif(r == E):
		re = 1
	elif(r == D):
		re = 0
	else:
		re = 0

p = re * (1/100)
print(p)
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(r != X):
NameError: name 'X' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:34:08) 
-- CODE:
V = 3
E = 1
D = 0
X = "fim"
r = 0

while(r != X):
	r=input("resultado: ").upper()
	if(r == V):
		re = 3
	elif(r == E):
		re = 1
	elif(r == D):
		re = 0
	else:
		re = 0

p = re * (1/100)
print(p)
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    r=input().upper()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:34:26) 
-- CODE:
V = 3
E = 1
D = 0
X = "fim"
r = 0

while(r != X):
	r=input("resultado: ").upper()
	if(r == V):
		re = 3
	elif(r == E):
		re = 1
	elif(r == D):
		re = 0
	else:
		re = 0

p = re * (1/100)
print(p)
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    r=input().upper()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
